--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
                 <div id="cat">
                     <img src="./images/kity_cat.png" alt="" class="cat-img" />
                 </div>
+                <!--<div id="timeRemaining">Remaining Time: <span>00:00</span></div>-->
                 <div id="score">
                 </div>
                 <div id="live"></div>
+                <!-- Time Remaining -->
+                <div id="time">10</div>
             </div>
         </div>
         <div id="game-end">
