just minimal things

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <br />
             <div id="start-screen">
                 <button id="start-button">Start</button>
-                <p>Use the left, right, up and down arrow to collect the items!</p>
+                <p>Use the left, right, up and down arrow to collect the green items! Avoid from the reds!</p>
             </div>
         </div>
         <div id="game-container">
@@ -38,6 +38,7 @@
                 <h1>Game Over</h1>
                 <div>
                     <h2>Stats</h2>
+                    <p id="end-msg"> </p>
                     <p> <span id="end-score"> </span></p>
                     <p> <span id="end-live"> </span></p>
                 </div>
